# Hackathon-Project-UCDavis-2026

./: pyproject.toml  requirements.txt  urban_design.md
backend/: __init__.py  main.py  physics.py  viability.py
backend/services/: __init__.py  osm_service.py  zoning_mapper.py
backend/tests/: test_physics.py  test_physics_bilinear.py  test_viability.py  test_zoning_mapper.py
frontend/: .env  .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: PlanningMap.tsx
frontend/src/config/: noiseMap.ts
frontend/src/lib/: api.ts  geo.ts
