[project]
name = "urban-acoustic"
version = "0.1.0"
description = "UrbanAcoustic Phase A — noise grid API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numpy>=2.0.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
